Fixed GET wrong POST